# spacetimepy-jupyterlab

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
scripts/: generate-kernel-code.mjs
spacetimepy_jupyterlab/: __init__.py
spacetimpepy_jupyterlab/: __init__.py
spacetimpepy_jupyterlab/labextension/: package.json
spacetimpepy_jupyterlab/labextension/static/: 266.37c19bbce85c5109.js  590.d2a23a35ae3d0759.js  remoteEntry.4bed3ddd05f6df11.js  style.js  third-party-licenses.json
src/: combinations.spec.ts  combinations.ts  index.ts  kernel-code.spec.ts  kernel-code.ts  trace-tree.spec.ts  trace-tree.ts  trace-view.ts  types.ts
src/kernel/: finish-workflow-recording.py  reexecute-variant.py  trace-query.py  workflow-summary.py
style/: index.css
tests/: test_kernel_v2_workflow.py
