[build-system]
requires = ["hatchling>=1.18.0", "hatch-jupyter-builder>=0.9.1", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "spacetimpepy-jupyterlab"
version = "0.1.0"
description = "Exploratory notebook controls and side panel for JupyterLab."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "spacetimpepy contributors" }]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = ["jupyterlab>=4.0.0,<5"]

[project.urls]
Homepage = "https://github.com/example/spacetimpepy-jupyterlab"

[tool.hatch.build.targets.sdist]
include = [
  "spacetimpepy_jupyterlab",
  "src",
  "style",
  "package.json",
  "tsconfig.json",
  "README.md",
  "pyproject.toml"
]
artifacts = ["spacetimpepy_jupyterlab/labextension"]

[tool.hatch.build.targets.wheel]
packages = ["spacetimpepy_jupyterlab"]
artifacts = ["spacetimpepy_jupyterlab/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"spacetimpepy_jupyterlab/labextension" = "share/jupyter/labextensions/spacetimpepy-jupyterlab"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["spacetimpepy_jupyterlab/labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = ["npm"]
build_cmd = "build:prod"
