[build-system]
requires = ["hatchling>=1.18.0", "hatch-jupyter-builder>=0.9.1", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "spacetimepy-jupyterlab"
version = "0.2.0"
description = "Exploratory notebook controls and side panel for JupyterLab."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD-3-Clause" }
authors = [{ name = "spacetimepy contributors" }]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "jupyterlab>=4.0.0,<5",
  "sampling-mining-workflows-dsl>=0.0.2,<0.1",
  "spacetimepy>=2.0.0,<3"
]

[project.urls]
Homepage = "https://github.com/example/spacetimepy-jupyterlab"

[tool.hatch.build.targets.sdist]
include = [
  "spacetimepy_jupyterlab",
  "scripts",
  "src",
  "style",
  "package.json",
  "tsconfig.json",
  "README.md",
  "pyproject.toml"
]
artifacts = ["spacetimepy_jupyterlab/labextension"]

[tool.hatch.build.targets.wheel]
packages = ["spacetimepy_jupyterlab"]
artifacts = ["spacetimepy_jupyterlab/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"spacetimepy_jupyterlab/labextension" = "share/jupyter/labextensions/spacetimepy-jupyterlab"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["spacetimepy_jupyterlab/labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = ["npm"]
build_cmd = "build:prod"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv.sources]
spacetimepy = { path = "../SpaceTimePy", editable = true }
sampling-mining-workflows-dsl = { path = "../SamplingMiningWorkflowDSL", editable = true }
